manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smap
  labels:
    app.kubernetes.io/part-of: smap
